--- a/SSEClientSideDemo.html
+++ b/SSEClientSideDemo.html
@@ -11,11 +11,12 @@
       .incomingData {
         display: flex;
         justify-content: flex-start;
-        gap: 30px;
+        gap: 100px;
+        margin-left: 190px;
       }
 
       .incomingData p {
-        min-width: 150px;
+        min-width: 200px;
         white-space: nowrap;
         
       }
@@ -50,6 +51,7 @@
         border: solid black;
         padding: 15px;
         font-size: 16px;
+        background-color: lightgray;
       }
     </style>
   </head>
@@ -120,7 +122,7 @@
                 .attr("cx", x(data.length - 1))
                 .attr("cy", y(lastValue))
                 .attr("r", 4)
-                .attr("fill", path.attr("stroke"));  // same color as line
+                .attr("fill", path.attr("stroke"));
         }
         return { update };
       }
